[feat/#21] WhiteList 수정 처리